# RayTracing

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: aabb.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  utils.h  vec3.h
include/Hittable/: bvh.h  hittable.h  hittable_list.h  sphere.h
include/Material/: dielectric.h  lambertian.h  material.h  metal.h
include/Scenes/: scene.h
include/Texture/: checker_texture.h  solid_color.h  texture.h
include/Utilities/: interval.h  utils.h  vec3.h
src/: aabb.cpp  camera.cpp  color.cpp  generate_ppm.cpp  hittable.cpp  hittable_list.cpp  image.ppm  interval.cpp  main.cpp  material.cpp  ray.cpp  sphere.cpp  test  test.cpp  vec3.cpp
src/Hittable/: bvh.cpp  hittable.cpp  hittable_list.cpp  sphere.cpp
src/Material/: dielectric.cpp  lambertian.cpp  material.cpp  metal.cpp
src/Scenes/: scene.cpp
src/Texture/: checker_texture.cpp  solid_color.cpp
src/Utilities/: interval.cpp  vec3.cpp
